--- a/bm25/gen_compile_commands/Makefile
+++ b/bm25/gen_compile_commands/Makefile
@@ -1,13 +1,14 @@
 CXX = clang++
 CXXFLAGS = -std=c++11 -stdlib=libc++ -fopenmp -Iinclude -Llib -lstdc++
 SRCS = main.cpp ../bm25_utils.cpp
-INCLUDES = ../ 
+INCLUDES = ../ -I/usr/include
 TARGET = bm25
+LIBS = -lstdc++ -llmdb
 
 ## This generates compile_commands.json file for the lsp.
 ## Cython compilation causing problems.
 
 all:
-	bear -- $(CXX) $(CXXFLAGS) -o $(TARGET) $(SRCS) -I$(INCLUDES)
+	bear -- $(CXX) $(CXXFLAGS) -o $(TARGET) $(SRCS) -I$(INCLUDES) $(LIBS)
 	mv compile_commands.json ../../
 	rm -f $(TARGET)
