Fixed document constructor. Need to fix json constructor.

--- a/bm25/Makefile
+++ b/bm25/Makefile
@@ -1,3 +1,9 @@
 ## Thin wrapper for cpp code in dir below
 run:
 	cd cpp_testing && make run
+
+sanitize:
+	cd cpp_testing && make sanitize
+
+memprof:
+	cd cpp_testing && make memprof
