Replaced c++'y bloom filter implementation with simple custom one only for uint64_t's atm.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
-name = rapid_bm25
+name = bloom25 
 version = 0.1.0
 author = Jake Mehlman
-description = Very fast and memory efficient implementation of okapi BM25.
+description = FTS BM25F index using Bloom filters for high df terms
 long_description = file: README.md
 long_description_content_type = text/markdown
 classifiers =
