Adding local_testing cpp script for faster and more robust testing and debugging.

--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,11 @@ mb_db/
 bm25_model/
 compile_commands.json
 mb_small.csv
+/bin/
 
 # C extensions
 *.so
+*.o
 
 # Distribution / packaging
 .Python
